<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.helios.movietype.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/type_of_movies"
        android:textSize="48sp" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/rb_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horror"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/rb_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comedy"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/rb_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thriller"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/rb_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sci_fiction"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/rb_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/romantic"
            android:textSize="30sp" />
    </RadioGroup>

    <Button
        android:id="@+id/select"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/select"
        android:textSize="30sp"
        android:onClick="select"/>
</RelativeLayout>
